--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 
 before_install:
+    - easy_install distribute
+    - pip install -r requirements.txt
     - pip install pep8
 script:
     - find . -name \*.py -exec pep8 {} +
