--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
-
-before_install:
+python:
+  - "3.6"
+install:
     - easy_install distribute
     - pip install -r requirements.txt
     - pip install pep8
