--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 python:
   - "3.6"
 install:
-    - easy_install distribute
-    - pip install --user -r requirements.txt
-    - pip install pep8
+    # - easy_install distribute
+    # - pip install -r requirements.txt
+    # - pip install pep8
 script:
     - find . -name \*.py -exec pep8 {} +
