--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install:
     # - easy_install distribute
-    # - pip install -r requirements.txt
-    # - pip install pep8
+    - pip install -r requirements.txt
+    - pip install pep8
 script:
     - find . -name \*.py -exec pep8 {} +
