--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
   - "3.6"
+before_install:
+    - pip install -r requirements.txt
 install:
-    # - easy_install distribute
-    - pip install --allow-all-external -r requirements.txt
     - pip install pep8
 script:
     - find . -name \*.py -exec pep8 {} +
